<resources>
    <string name="app_name">SeimbanginApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_error_email_empty">Email is empty!</string>
    <string name="text_error_email_invalid">Email format is not valid!</string>
    <string name="text_error_password_less_than_8_char">Password length less than 8 character</string>
    <string name="text_error_password_empty">Password is empty!</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_enter_your_email">Enter your email</string>
    <string name="text_password">Password</string>
    <string name="text_enter_your_password">Enter your password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_don_t_have_account_register">Don\'t have account? Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hint_full_name_empty">Full name is empty</string>
    <string name="text_hint_user_name_empty">Username is empty</string>
    <string name="text_error_password_not_match">Password is not the same</string>
    <string name="text_already_have_an_account_login">Already have an account ? Login</string>
    <string name="text_create_account_to_continue">Create account to continue</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_enter_your_full_name">Enter your full name</string>
    <string name="text_username">Username</string>
    <string name="text_enter_your_username">Enter your username</string>
    <string name="text_next">Next</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="title_profile">Profile</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_financial_profile">Financial Profile</string>
    <string name="text_setting">Setting</string>
    <string name="text_log_out">Log out</string>
    <string name="text_version">Version 1.1.0</string>
    <string name="text_update">Update</string>
    <string name="text_upload_photo">Upload Photo</string>
    <string name="text_monthly_income">Monthly Income</string>
    <string name="text_enter_your_monthly_income">Enter your monthly income</string>
    <string name="text_current_savings">Current Savings</string>
    <string name="text_enter_your_current_savings">Enter your current savings</string>
    <string name="text_debt">Debt</string>
    <string name="text_enter_your_debt">Enter your debt</string>
    <string name="text_financial_goals">Financial Goals</string>
    <string name="text_enter_your_financial_goals">Enter your financial goals</string>
    <string name="text_risk_management">Risk Management</string>
    <string name="text_enter_your_risk_management">Enter your risk management</string>
    <string name="text_update_profile_image_success">Update profile image success</string>
    <string name="text_update_profile_success">Update profile success</string>
    <string name="text_update_financial_profile_success">Update financial profile success</string>
    <string name="text_input_valid_number">Input valid number</string>
    <string name="text_monthly_income_still_empty">Monthly income still empty</string>
    <string name="text_current_savings_still_empty">Current savings still empty</string>
    <string name="text_debt_still_empty">Debt still empty</string>
    <string name="text_financial_goals_still_empty">Financial goals still empty</string>
    <string name="text_change_limit">Change limit</string>
    <string name="text_change_page">Change page</string>
    <string name="text_previous">Previous</string>
    <string name="text_search">Search</string>
    <string name="format_pagination">%1$d / %2$d</string>
    <string name="text_income">Income</string>
    <string name="text_outcome">Outcome</string>
    <string name="text_category">Category</string>
    <string name="text_amount">Amount</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="text_description">Description</string>
    <string name="text_enter_description">Enter Description</string>
    <string name="text_create_transaction">Create Transaction</string>
    <string name="text_category_icon">Category Icon</string>
    <string name="text_delete">Delete</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete_transaction_success">Delete Transaction Success</string>
    <string name="text_delete_transaction_confirmation">Are you sure want to delete this transaction ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_amount_still_empty">Amount still empty</string>
    <string name="text_description_still_empty">Transaction name still empty</string>
    <string name="text_please_select_category">Please select category</string>
    <string name="text_food">Food</string>
    <string name="text_transportation">Transportation</string>
    <string name="text_utilities">Utilities</string>
    <string name="text_entertainment">Entertainment</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_healthcare">Healthcare</string>
    <string name="text_education">Education</string>
    <string name="text_others">Others</string>
    <string name="text_create_transaction_success">Create Transaction Success</string>
    <string name="text_transaction_still_empty">Transaction still empty</string>
    <string name="text_hi_user">Hi %1$s</string>
    <string name="text_greeting_user">How are you today ?</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_see_all">See All</string>
    <string name="text_ask_to_ai">Ask to AI</string>
    <string name="text_ask_anything_to_ai">Ask anything to AI</string>
    <string name="outcome">Outcome</string>
    <string name="text_last_income_transaction">Last Income Transaction</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_outcome">Total Outcome</string>
    <string name="text_last_outcome_transaction">Last Outcome Transaction</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_language">Language</string>
    <string name="text_sign_in_to_continue">Sign in to continue</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="text_success">Success</string>
    <string name="text_successfully_creating_the_account">Successfully creating the account!</string>
    <string name="text_failed">Failed</string>
    <string name="text_failed_creating_account">Creating account failed! \n %1$s</string>
    <string name="text_failed_update_financial_profile">Update financial profile failed! \n %1$s</string>
    <string name="text_failed_update_profile">Update profile failed! \n %1$s</string>
    <string name="text_failed_creating_transaction">Create transaction failed! \n %1$s</string>
    <string name="text_last_transaction">Last Transaction</string>
    <string name="text_transaction_name">Transaction Name</string>
    <string name="text_format_quantity">x %1$s</string>
    <string name="text_total_price">Total Price :</string>
    <string name="text_fill_financial_profile">Please fill your financial profile data to use AI Advisor !</string>
    <string name="text_financial_ai_advisor">Financial AI Advisor</string>
    <string name="text_scan_image_warning">Example of correct image</string>
    <string name="text_scan_receipt_success">Scan Receipt Success</string>
    <string name="text_scan_receipt">Scan Receipt</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="text_upload">Upload</string>
    <string-array name="risk_management_types">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="text_continue">Continue</string>
    <string name="text_income_capital">INCOME</string>
    <string name="text_outcome_capital">OUTCOME</string>
    <string name="text_list_items">List Items</string>
    <string name="text_transaction_info">Transaction Info</string>
    <string name="text_date">Date</string>
    <string name="text_total_item">Total Item</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_price">Price</string>
    <string name="text_item_name">Item Name</string>
    <string name="text_email_username_still_empty">Email / Username still empty</string>
    <string name="text_email_username">Email / Username</string>
    <string name="text_welcome_back">Welcome back</string>
    <string name="text_welcome_let_s_get_you_started">Welcome! Let’s get you started.</string>
    <string name="text_smart_money_balanced_journey" translatable="false">“Smart Money, Balanced Journey”</string>
    <string name="text_title_onboarding_1">Track Your Finances, Effortlessly!</string>
    <string name="text_title_onboarding_2">Automate Your Tracking!</string>
    <string name="text_title_onboarding_3">Know Where Your Money Goes!</string>
    <string name="text_desc_onboarding_1">Simple and intuitive design makes managing your money stress-free. Perfect for everyone!</string>
    <string name="text_desc_onboarding_3">Easily see your income, expenses, and financial trends in one place. Stay in control of your budget!</string>
    <string name="text_desc_onboarding_2">Simply scan your purchase receipts, and we’ll handle the rest. Fast, accurate, and hassle-free!</string>
    <string name="text_outcome_chart">Outcome Chart</string>
    <string name="text_income_chart">Income Chart</string>
</resources>