<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ocr.OcrActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIconTint="@color/white_500"
            app:title="@string/text_scan_receipt"
            app:titleTextColor="@color/white_500" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintBottom_toTopOf="@id/btn_choose_image"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <Button
        android:id="@+id/btn_choose_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary_100"
        android:padding="16dp"
        android:text="@string/text_choose_image"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@id/btn_upload" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_primary_rounded"
        android:text="@string/text_upload"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

</androidx.constraintlayout.widget.ConstraintLayout>